--- a/TechShopManagement/TechShopManagement.csproj
+++ b/TechShopManagement/TechShopManagement.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
     <Compile Include="DataBaseAccess.cs" />
+    <Compile Include="Encryption.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
